# cairo-parser

./: .gitignore  README.md  __init__.py  __main__.py  install.py  parser.py  pyproject.toml
.github/workflows/: release.yml
cairo_parser/: __init__.py  __main__.py  parser.py
cairo_parser/analysis/: __init__.py  analyzer.py  cfg.py  dataflow.py  serialization.py  statements.py
